// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionDeleteRecord Dialog closed Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="removeRecord-icon" class="v-icon notranslate v-icon--left mdi mdi-playlist-remove theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="removeRecord-title" class="v-list-item__title text-left">Delete Session Record</div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionDeleteRecord Dialog opened Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="removeRecord-icon" class="v-icon notranslate v-icon--left mdi mdi-playlist-remove theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="removeRecord-title" class="v-list-item__title text-left">Delete Session Record</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
